...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/txvFoodTitle">

            <su.leff.smartcounter.colorer.view.CustomButton
                android:id="@+id/cbBreakfast"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cbDinner"
...
