package su.leff.smartcounter

import androidx.test.runner.AndroidJUnit4
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class IntegrationTests {

//    @get:Rule
//    var activityActivityTestRule = ActivityTestRule<MainActivity>(MainActivity::class.java)
//
//    lateinit var navigator: FragmentNavigator
//
//    @Test
//    fun createNewFood() {
//        val mockNavController = mock(NavController::class.java)
//
//        val titleScenario = launchFragmentInContainer<HomePageFragment>()
//
//        titleScenario.onFragment { fragment ->
//            Navigation.setViewNavController(fragment.requireView(), mockNavController)
//        }
//
//        onView(ViewMatchers.withId(R.id.fabAdd)).perform(ViewActions.click())
//        onView(ViewMatchers.withId(R.id.cbBreakfast)).perform(ViewActions.click())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.click())
//
//        val edittext = activityActivityTestRule.activity.findViewById<EditText>(R.id.edtSearchBar)
//        edittext.setText("Рис")
//
//        onView(ViewMatchers.withId(R.id.imgvBackButton)).perform(ViewActions.click())
//    }
//
//    @Test
//    fun scrollListToBottom(){
//        val mockNavController = mock(NavController::class.java)
//
//        val titleScenario = launchFragmentInContainer<HomePageFragment>()
//
//        titleScenario.onFragment { fragment ->
//            Navigation.setViewNavController(fragment.requireView(), mockNavController)
//        }
//
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//        onView(ViewMatchers.withId(R.id.recyclerFood)).perform(ViewActions.swipeUp())
//    }


    @Test
    fun test1(){
    }

    @Test
    fun test2(){
    }

    @Test
    fun test3(){
    }

    @Test
    fun test4(){
    }

    @Test
    fun test5(){
    }

    @Test
    fun test6(){
    }
}